--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
 spring.application.name=student-course-api
 
-# PostgreSQL Configuration - Funciona tanto local como en Render
+# PostgreSQL Configuration
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/university_db}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA/Hibernate para PostgreSQL
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# CORS - Permitir todos los orígenes
+# CORS
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=false
 
 # Server
-server.port=8080
+server.port=8080git add .
