--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=student-course-api
 
-# PostgreSQL Configuration
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/university_db}
+# PostgreSQL Configuration - Convertir DATABASE_URL a formato JDBC
+spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/university_db}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # CORS
 spring.web.cors.allowed-origins=*
