--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=student-course-api
 
-# PostgreSQL Configuration - Convertir DATABASE_URL a formato JDBC
-spring.datasource.url=jdbc:${DATABASE_URL:postgresql://localhost:5432/university_db}
+# PostgreSQL Configuration usando variables separadas
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:university_db}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
